--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -474,7 +474,7 @@ In the following section, we will describe how the angular disparity can be calc
 \begin{figure}[h!]
 \centering
 \includesvg{binocular}
-\caption{Image}
+\caption{Binocular disparity}
 \label{fig:stereopsis}
 \end{figure} 
 
