--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -387,14 +387,27 @@
 }
 
 @book{how95,
-	  title={Binocular vision and stereopsis.},
-	    author={Howard, Ian P and Rogers, Brian J},
-	      year={1995},
-	        publisher={Oxford University Press}
+ title={Binocular vision and stereopsis.},
+ author={Howard, Ian P and Rogers, Brian J},
+ year={1995},
+ publisher={Oxford University Press}
 }
+
 @book{binr83,
-	  title={Binocular vision: Foundations and applications},
-	    author={Reading, RW},
-	      year={1983},
-	        publisher={Butterworths}
+ title={Binocular vision: Foundations and applications},
+ author={Reading, RW},
+ year={1983},
+ publisher={Butterworths}
 }
+
+@article{garn06,
+  title={Effect of age on adult stereoacuity as measured by different types of stereotest},
+  author={Garnham, L and Sloper, JJ},
+  journal={British journal of ophthalmology},
+  volume={90},
+  number={1},
+  pages={91--95},
+  year={2006},
+  publisher={BMJ Publishing Group Ltd.}
+}
+
