--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -19,9 +19,9 @@ the same time by the two eyes, while the observer standing at a fixed position \
 \begin{figure}[!h]
 \centering
 \subcaptionbox{Motion Parallax}
-[.4\linewidth]{\includesvg{Mparallax}}%
+[.4\linewidth]{\includegraphics{Mparallax}}%
 \subcaptionbox{Binocular Parallax}
-[.4\linewidth]{\includesvg{Bparallax}}%
+[.4\linewidth]{\includegraphics{Bparallax}}%
 \caption{Motion parallax and binocular arallax difference}
 \label{fig:parallax}
 \end{figure}
@@ -63,9 +63,9 @@ In the geometry of stereopsis, the relative disparity between two objects is usu
 
 In the following section, we will describe how the angular disparity can be calculated utilizing the geometry of stereopsis \cite{binr83}.
 
-\begin{figure}[h!]
+\begin{figure}[!h]
 \centering
-\includesvg{binocular}
+\includegraphics[width=0.5\textwidth]{binocular}
 \caption{Binocular disparity}
 \label{fig:stereopsis}
 \end{figure} 
