--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -1,4 +1,5 @@
 \chapter{Design of Evaluation Scheme}
+\label{chap:System}
 
 This chapter walks through the steps taken in order to build up our evaluation framework and justification of each decision taken during this design.
 
@@ -86,7 +87,3 @@ the evaluation process.
 \subsection{Platform, Technology}
 The evaluation process have been implemented on a Unix-based platform using C++ programming language as the language used for implementing 
 the core functions of the evaluation and Tool Command Language (TCL) for all the scripts.
-
-
-
-
