--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -1,11 +1,11 @@
-\documentclass[12pt]{report}
+\documentclass[dvips,letterpaper,12pt]{report}
 \usepackage[square,numbers]{natbib}
 \usepackage{url}
 \usepackage{thesis}
-\usepackage{graphicx}
+\usepackage[dvips]{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
-\usepackage{svg}
+%\usepackage{svg}
 \usepackage{amsmath}
 \usepackage{mathtools}
 %\usepackage{epstopdf}
