tiny errors in text modified

--- a/ThesisReport/Introduction.tex
+++ b/ThesisReport/Introduction.tex
@@ -30,7 +30,7 @@ we can refer to:
 AR systems overlay 2D or 3D virtual objects on real scenes. Therefore, depending on the application, certain accuracy is required for 
 registration of virtual and real objects. There are different approaches to obtain user's location and the position of other objects in the environment.
 Tracking sensors such as gyroscope and accelerometer along with video sensors can provide information on the user's position and viewing orientation \cite{azum01}.
-In order to find the position of the objects in the scene, a depth map of the surrounding environment at each time would be required. To obtain the depth of the 
+In order to find the position of the objects in the scene, a depth map of the surrounding environment at each time is required. To obtain the depth of the 
 objects in the scene several depth sensing technologies can be used such as 3D laser scanner, depth cameras or regular cameras. However, in order to have a mobile AR
 system that is easy to carry around, the weight of the whole system will be more of a concern, hence, 3D laser scanners and depth cameras are not good choices for such systems.
 Depth cameras, such as Kinect, or DS325 have certain limitation in viewing range (1m-5m) which can worsen in outdoor environments due to various types of noise. 
@@ -48,7 +48,7 @@ accuracy and in real-time for practical applications still remains a challenging
 \section {Research Objective}
 
 Our motivation in this research is to study the possibility and usability of combining stereo vision approaches with AR systems considering the most important constraints that AR systems
-normally come across. Therefore, we have tried to propose an evaluation scheme that enables us to examine whether using stereo vision
+normally encounter. Therefore, we have tried to propose an evaluation scheme that enables us to examine whether using stereo vision
 for obtaining 3D position of objects is potentially a practical approach in an augmented reality application. A particular application that we have been considered in
 this study, is a 3D mobile augmented reality system in urban settings. 
 In fact, our fundamental research question is: \newline
