--- a/ThesisReport/System.tex
+++ b/ThesisReport/System.tex
@@ -41,8 +41,8 @@ the aspects in which they would affect each other while building a practical AR 
 Concentrating on the requirements of obtaining a real-time interaction between an AR system and the users, and
 also certain human factors which would affect both the augmented reality and stereo vision components of the system,
 has revealed the necessity of involving them in the evaluation of stereo correspondence solutions used for generation of the depth map in such systems; hence, in order to 
-determine whether a stereo correspondence algorithm can meet the requirements of an outdoor AR application we need to design an evaluation scheme which can properly assess 
-the \textit{efficiency} of the algorithm in the system and the accuracy of its disparity result based on the important human factors in an binocular vision and an AR system.
+determine whether a stereo correspondence algorithm can meet the requirements of an outdoor AR application, we need to design an evaluation scheme which can properly assess 
+the \textit{efficiency} of the algorithm in the system and the accuracy of its disparity results based on the important human factors in binocular vision and an AR system.
 These factors are in fact the concepts related to real-time interaction of an AR system mentioned in \ref{chap:Introduction}, and binocular vision, stereopsis, human perception of depth, 
 and stereoacuity as thoroughly described in \ref{chap:BinocularVision}.
 
