plotting updated and binocularvision chapter updated

--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -88,7 +88,7 @@ an approximate formula as follows:
 \theta = a \Delta Z/Z^{2}
 \end{align}
 
-in which a is the distance between the center of the pupils of the two eyes, which is known as interpupillary distance.
+in which $a$ is the distance between the center of the pupils of the two eyes, which is known as interpupillary distance.
 It should be noted that this formula estimates the angular disparity in radiant. In order to convert $\theta$ to arcseconds it should be multiplied by:
 
 \begin{align}
